tests/ui/lint/snapshots/bool_literal_comparison_ne_true.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Redundant comparison to boolean literal
   ╭─[test.lis:4:11]
 3 │   let x = true;
 4 │   let _ = x != true
   ·           ────┬────
   ·               ╰── can be simpler
 5 │ }
   ╰────
  help: Simplify to `!x` · code: [lint.bool_literal_comparison]
