tests/ui/lint/snapshots/cast_nan_to_int_alias.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Conversion of `NaN` to integer
   ╭─[test.lis:5:11]
 4 │ fn main() {
 5 │   let _ = math.NaN() as Count
   ·           ─────────┬─────────
   ·                    ╰── `NaN` has no `Count` value
 6 │ }
   ╰────
  help: In Go, converting `NaN` to an integer produces an arbitrary, implementation-specific value rather than a meaningful one. Guard with `math.IsNaN(...)` before converting, or keep the value as a float · code: [infer.convert_nan_to_int]
