tests/ui/lint/snapshots/cast_nan_to_int_uintptr.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Conversion of `NaN` to integer
   ╭─[test.lis:4:11]
 3 │ fn main() {
 4 │   let _ = math.NaN() as uintptr
   ·           ──────────┬──────────
   ·                     ╰── `NaN` has no `uintptr` value
 5 │ }
   ╰────
  help: In Go, converting `NaN` to an integer produces an arbitrary, implementation-specific value rather than a meaningful one. Guard with `math.IsNaN(...)` before converting, or keep the value as a float · code: [infer.convert_nan_to_int]
